# AIOD-rest-api

./: # Questions.md  .dockerignore  .env  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  docker-compose.dev.yaml  docker-compose.yaml  docker-description.md  mkdocs.yaml  pyproject.toml
.github/workflows/: dockerized-tests.yml  docs.yml  pytest-tests.yml
alembic/: Dockerfile  README.md
alembic/alembic/: env.py
alembic/alembic/versions/: 0a23b40cc09c_extend_max_length_of_text_in_note.py  0f2fe1324047_non_nullable_date_modified_and_date_created.py  1662d64ebe23_make_draft_status_enum.py  279e17c48ea1_extend_description_length.py  d09ed8ad4533_add_news_source.py
authentication/: Dockerfile
backups/: Dockerfile  README.md  backup.sh  cron  entry.sh  entry_restore.sh  restore.sh  test_backup_restore.py
connectors/: fill-examples.sh
connectors/aibuilder/: Dockerfile  cron  entry.sh  mlmodels.sh
connectors/huggingface/: datasets.sh
connectors/openml/: Dockerfile  cron  datasets.sh  entry.sh  mlmodels.sh
connectors/zenodo/: Dockerfile  cron  datasets.sh  entry.sh
deletion/: Dockerfile  cron  delete_old.sh  entry.sh
docs/: Contributing.md  Hosting.md  README.md  Using.md
docs/developer/: auth.md  code.md  index.md  migration.md  releases.md  scripts.md
docs/developer/schema/: attributes.md  index.md
examples/authentication/: example_authenticate_with_service_account.sh
examples/upload/: example_upload_dataset_with_service_account.sh
logstash/: Dockerfile
media/: AIoD_Metadata_Model.drawio
quay-keycloak/: realm-export.json
scripts/: README.md  backup.sh  clean.sh  database-connect.sql  down.sh  migrate_hf.py  mysql_dump.sh  mysql_restore.sh  realm_export.sh  restore.sh  set_alembic.sh  up.sh
src/: README.md  authentication.py  config.default.toml  config.py  main.py  serialization.py  setup_logger.py
src/connectors/: __init__.py  record_error.py  resource_with_relations.py  synchronization.py
src/connectors/abstract/: resource_connector.py  resource_connector_by_date.py  resource_connector_by_id.py  resource_connector_on_start_up.py
src/connectors/aibuilder/: aibuilder_mappings.py  aibuilder_mlmodel_connector.py
src/connectors/example/: enum.py  enum_fill_connector.py  example.py  example_connector.py  example_dataset_connector.py
src/connectors/huggingface/: huggingface_dataset_connector.py
src/connectors/openml/: openml_dataset_connector.py  openml_mlmodel_connector.py
src/connectors/zenodo/: zenodo_dataset_connector.py
src/converters/schema/: dcat.py  schema_dot_org.py
src/converters/schema_converters/: schema_converter.py
src/database/: session.py  setup.py
src/database/deletion/: hard_delete.py  triggers.py
src/database/model/: agent_table.py  annotations.py  field_length.py  helper_functions.py  named_relation.py  relationships.py  resource.py  resource_read_and_create.py  serializers.py
src/database/validators/: huggingface_validators.py  openml_validators.py  zenodo_validators.py
src/dependencies/: filtering.py  pagination.py
src/error_handlers/: __init__.py  error_handlers.py
src/error_handling/: __init__.py  error_handling.py
src/routers/: __init__.py  dataset_router.py  dataset_router_new.py  educational_resource_router.py  event_router.py  experiment_router.py  ml_model_router.py  organisation_router.py  parent_class_router.py  parent_router.py  person_router.py  platform_router.py  publication_router.py  resource_ai_asset_router.py  resource_router.py  resource_router_list.py  search_router.py  service_router.py  upload_router_huggingface.py  uploader_router.py
src/routers/enum_routers/: __init__.py  enum_router.py
src/routers/parent_routers/: __init__.py  agent_router.py  ai_asset_router.py  ai_resource_router.py
src/routers/resource_routers/: __init__.py  case_study_router.py  computational_asset_router.py  contact_router.py  dataset_router.py  experiment_router.py  ml_model_router.py  news_router.py  organisation_router.py  person_router.py  platform_router.py  project_router.py  publication_router.py  service_router.py  team_router.py
src/routers/search_routers/: __init__.py  elasticsearch.py  search_router_case_studies.py  search_router_datasets.py  search_router_educational_resources.py  search_router_events.py  search_router_experiments.py  search_router_ml_models.py  search_router_news.py  search_router_organisations.py  search_router_projects.py  search_router_publications.py  search_router_services.py
src/routers/uploader_routers/: __init__.py  upload_router_huggingface.py  upload_router_zenodo.py
src/setup/es_setup/: definitions.py  generate_elasticsearch_indices.py
src/setup/logstash_setup/: generate_logstash_config_files.py
src/tests/: .env  test_authentication.py  test_configuration.py
src/tests/backups/: test_backup_restore.py  test_backup_scripts.py
src/tests/database/: test_populate_database.py
src/tests/routers/: test_router_case_study.py  test_router_computational_resource.py  test_router_dataset.py  test_router_dataset_generic_fields.py  test_router_dataset_new.py  test_router_educational_resource.py  test_router_event.py  test_router_experiment.py  test_router_ml_model.py  test_router_news.py  test_router_organisation.py  test_router_person.py  test_router_platform.py  test_router_presentation.py  test_router_project.py  test_router_publication.py  test_router_service.py  test_router_team.py
src/tests/testutils/: authentication.py  (+4 more)
src/uploader/: hugging_face_uploader.py  zenodo_uploader.py
src/uploaders/: hugging_face_uploader.py  uploader.py  zenodo_uploader.py
venv_aibuilder/: pyvenv.cfg
(+282 files in other folders)
